Fix header and add download button

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -33,6 +33,13 @@
   <header>
     <h1>Zoning Reform Dashboard — Prototype</h1>
     <div class="pill">Data source: <code>data/outputs/reform_impact_metrics.csv</code></div>
+    <div style="margin-top:12px;">
+      <button id="downloadBtn"
+              style="background:#2563eb;color:white;border:none;
+                     padding:8px 14px;border-radius:8px;cursor:pointer;">
+      ⬇️ Download Data (CSV)
+      </button>
+    </div>
   </header>
 
   <div class="container">
